src/sass/abstracts/_variables.scss
// Font sizes (1rem, 0.875rem = 14px, 0.75rem = 11px)
$font-size--normal: 16px;
$font-size--small: 0.875rem;
$font-size--extra-small: 0.75rem;
$font-size--extra-small: 0.75rem;

// Font weight
$weight--normal: 400;
$weight--bold: 500;

// alt $b: #3aa2f8, $b--dark: #5eacec
$b: hsla(205, 100%, 70%);
$b--alpha: hsla(205, 100%, 70%, 1);
$b--dark: hsl(213, 100%, 50%);
$b--dark--alpha: hsla(213, 100%, 50%, 1);
//$b-grad: to bottom right, $b, $b--dark;

$y: #ffc000;
$y--dark: #ff6e00;
$y--grad: to bottom, $y, $y--dark;

// Light mode
$bg: hsl(0, 0%, 100%);
$bg--ascent: hsl(0, 0%, 100%);
$color: hsla(0, 0%, 0%, 0.9);
$color--ascent: hsl(0, 0%, 44%);
$shadow-color: hsla(0, 0%, 0%, 0.1);
$border-color: hsla(0, 0%, 0%, 0.096);
$anchor-color: $b--dark;

// Dark mode // 131315 // 1d1d20
$bg--dark: #131315;
$bg--ascent--dark: #1d1d20;
$color--dark: hsla(0, 0%, 100%, 0.86);
$color--ascent--dark: hsl(0, 0%, 62%);
$shadow-color--dark: hsla(0, 0%, 0%, 0.18);
$border-color--dark: hsla(240, 6%, 0%, 0.44);
$anchor-color--dark: $b;

// Animation
$animation-speed--fast: 100ms;
$animation-speed--medium: 200ms;
$animation-function: cubic-bezier(0.215, 0.61, 0.355, 1);

// Media queries
$media--max-big: 1199px;
$media--max-medium: 959px;
$media--max-small: 639px;
$media--max-micro: 359px;

$border-radius: 4px;

//$grad: to top right, #d2faff, #80ddff, #3aa2f8, #0055c2, #002790;

